--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
-
-@import './App.css';
 @import '~antd/dist/antd.css';
+@import './App.css';
+@import './Register.css';
+@import './Main.css';
+
 
 body {
   margin: 0;
