--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,17 +5,19 @@
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 50px;
+  float: left;
 }
 
 .App-title {
   color: #61dafb;
   font-size: 20px;
   font-weight: 600;
+  float: left;
+  padding-top: 10px;
 }
 
 .App-header {
   background-color: #282c34;
-  display: flex;
   align-items: center;
   font-size: calc(10px + 2vmin);
   color: white;
